--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-loader-spinner": "^6.1.6",
+    "react-router-dom": "^6.27.0",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5"
   }
